--- a/smackdown.html
+++ b/smackdown.html
@@ -11,7 +11,7 @@
         <img src="background.jpg" alt="Header Background" class="header-background">
         <h1>Friday Night SmackDown - Landon's Wrestling Multiverse Roster</h1>
         <nav class="brand-tabs">
-            <a href="Roster.html" class="tab">Home</a>
+            <a href="index.html" class="tab">Home</a>
             <a href="raw.html" class="tab raw-tab">Monday Night Raw</a>
             <a href="championships.html" class="tab championships-tab">Championships</a>
         </nav>
