--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <section class="roster-container">
         <!-- Alphabetically Sorted Wrestlers -->
         <div class="superstar-card">
-            <img src="Aaron.png" alt="Aaron" class="superstar-image">
+            <img src="aaron.png" alt="Aaron" class="superstar-image">
             <h2 class="superstar-name">Aaron</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">100</span></p>
             <div class="brand-indicator smackdown"></div>
         </div>
         <div class="superstar-card">
-            <img src="BiggieCheese.png" alt="Biggie Cheese" class="superstar-image">
+            <img src="biggiecheese.png" alt="Biggie Cheese" class="superstar-image">
             <h2 class="superstar-name">Biggie Cheese</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">85</span></p>
             <div class="brand-indicator smackdown"></div>
@@ -51,7 +51,7 @@
             <div class="brand-indicator smackdown"></div>
         </div>
         <div class="superstar-card">
-            <img src="David.png" alt="David" class="superstar-image">
+            <img src="david.png" alt="David" class="superstar-image">
             <h2 class="superstar-name">David</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">100</span></p>
             <div class="brand-indicator smackdown"></div>
@@ -63,19 +63,19 @@
             <div class="brand-indicator smackdown"></div>
         </div>
         <div class="superstar-card">
-            <img src="EDP445.png" alt="EDP445" class="superstar-image">
+            <img src="edp445.png" alt="EDP445" class="superstar-image">
             <h2 class="superstar-name">EDP445</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">79</span></p>
             <div class="brand-indicator raw"></div>
         </div>
         <div class="superstar-card">
-            <img src="Erik.jpg" alt="Erik" class="superstar-image">
+            <img src="erik.jpg" alt="Erik" class="superstar-image">
             <h2 class="superstar-name">Erik</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">78</span></p>
             <div class="brand-indicator raw"></div>
         </div>
         <div class="superstar-card">
-            <img src="Feptom.png" alt="Feptom" class="superstar-image">
+            <img src="feptom.png" alt="Feptom" class="superstar-image">
             <h2 class="superstar-name">Feptom</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">100</span></p>
             <div class="brand-indicator smackdown"></div>
@@ -87,13 +87,13 @@
             <div class="brand-indicator raw"></div>
         </div>
         <div class="superstar-card">
-            <img src="Goldberg.png" alt="Goldberg" class="superstar-image">
+            <img src="goldberg.png" alt="Goldberg" class="superstar-image">
             <h2 class="superstar-name">Goldberg</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">99</span></p>
             <div class="brand-indicator raw"></div>
         </div>
         <div class="superstar-card">
-            <img src="Grimace.png" alt="Grimace" class="superstar-image">
+            <img src="grimace.png" alt="Grimace" class="superstar-image">
             <h2 class="superstar-name">Grimace</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">76</span></p>
             <div class="brand-indicator raw"></div>
@@ -105,13 +105,13 @@
             <div class="brand-indicator smackdown"></div>
         </div>
         <div class="superstar-card">
-            <img src="Hunter.png" alt="Hunter" class="superstar-image">
+            <img src="hunter.png" alt="Hunter" class="superstar-image">
             <h2 class="superstar-name">Hunter</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">73</span></p>
             <div class="brand-indicator raw"></div>
         </div>
         <div class="superstar-card">
-            <img src="Ivar.png" alt="Ivar" class="superstar-image">
+            <img src="ivar.png" alt="Ivar" class="superstar-image">
             <h2 class="superstar-name">Ivar</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">75</span></p>
             <div class="brand-indicator raw"></div>
@@ -123,19 +123,19 @@
             <div class="brand-indicator smackdown"></div>
         </div>
         <div class="superstar-card">
-            <img src="KennyOmega.png" alt="Kenny Omega" class="superstar-image">
+            <img src="kennyomega.png" alt="Kenny Omega" class="superstar-image">
             <h2 class="superstar-name">Kenny Omega</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">95</span></p>
             <div class="brand-indicator raw"></div>
         </div>
         <div class="superstar-card">
-            <img src="KermitTheFrog.png" alt="Kermit the Frog" class="superstar-image">
+            <img src="kermitthefrog.png" alt="Kermit the Frog" class="superstar-image">
             <h2 class="superstar-name">Kermit the Frog</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">90</span></p>
             <div class="brand-indicator raw"></div>
         </div>
         <div class="superstar-card">
-            <img src="Landon.png" alt="Landon" class="superstar-image">
+            <img src="landon.png" alt="Landon" class="superstar-image">
             <h2 class="superstar-name">Landon</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">100</span></p>
             <div class="brand-indicator raw"></div>
@@ -147,13 +147,13 @@
             <div class="brand-indicator smackdown"></div>
         </div>
         <div class="superstar-card">
-            <img src="Marv.png" alt="Marv" class="superstar-image">
+            <img src="marv.png" alt="Marv" class="superstar-image">
             <h2 class="superstar-name">Marv</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">100</span></p>
             <div class="brand-indicator smackdown"></div>
         </div>
         <div class="superstar-card">
-            <img src="OBMania.png" alt="OBMania" class="superstar-image">
+            <img src="obmania.png" alt="OBMania" class="superstar-image">
             <h2 class="superstar-name">OBMania</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">100</span></p>
             <div class="brand-indicator raw"></div>
@@ -165,7 +165,7 @@
             <div class="brand-indicator smackdown"></div>
         </div>
         <div class="superstar-card">
-            <img src="PatrickStar.png" alt="Patrick Star" class="superstar-image">
+            <img src="patrickstar.png" alt="Patrick Star" class="superstar-image">
             <h2 class="superstar-name">Patrick Star</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">94</span></p>
             <div class="brand-indicator raw"></div>
@@ -177,49 +177,49 @@
             <div class="brand-indicator smackdown"></div>
         </div>
         <div class="superstar-card">
-            <img src="Seth.png" alt="Seth" class="superstar-image">
+            <img src="seth.png" alt="Seth" class="superstar-image">
             <h2 class="superstar-name">Seth</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">100</span></p>
             <div class="brand-indicator raw"></div>
         </div>
         <div class="superstar-card">
-            <img src="Silliam.png" alt="Silliam" class="superstar-image">
+            <img src="silliam.png" alt="Silliam" class="superstar-image">
             <h2 class="superstar-name">Silliam</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">100</span></p>
             <div class="brand-indicator raw"></div>
         </div>
         <div class="superstar-card">
-            <img src="SoloSikoa.png" alt="Solo Sikoa" class="superstar-image">
+            <img src="solosikoa.png" alt="Solo Sikoa" class="superstar-image">
             <h2 class="superstar-name">Solo Sikoa</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">85</span></p>
             <div class="brand-indicator raw"></div>
         </div>
         <div class="superstar-card">
-            <img src="Spiderman.png" alt="Spiderman" class="superstar-image">
+            <img src="spiderman.png" alt="Spiderman" class="superstar-image">
             <h2 class="superstar-name">Spiderman</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">76</span></p>
             <div class="brand-indicator raw"></div>
         </div>
         <div class="superstar-card">
-            <img src="StevensESP.png" alt="StevensESP" class="superstar-image">
+            <img src="stevensesp.png" alt="StevensESP" class="superstar-image">
             <h2 class="superstar-name">StevensESP</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">100</span></p>
             <div class="brand-indicator raw"></div>
         </div>
         <div class="superstar-card">
-            <img src="SoloSikoa.png" alt="Tama Tonga" class="superstar-image">
+            <img src="solosikoa.png" alt="Tama Tonga" class="superstar-image">
             <h2 class="superstar-name">Tama Tonga</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">98</span></p>
             <div class="brand-indicator raw"></div>
         </div>
         <div class="superstar-card">
-            <img src="TalkingBen.png" alt="Talking Ben" class="superstar-image">
+            <img src="talkingben.png" alt="Talking Ben" class="superstar-image">
             <h2 class="superstar-name">Talking Ben</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">100</span></p>
             <div class="brand-indicator smackdown"></div>
         </div>
         <div class="superstar-card">
-            <img src="SoloSikoa.png" alt="Tonga Loa" class="superstar-image">
+            <img src="solosikoa.png" alt="Tonga Loa" class="superstar-image">
             <h2 class="superstar-name">Tonga Loa</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">84</span></p>
             <div class="brand-indicator raw"></div>
@@ -237,7 +237,7 @@
             <div class="brand-indicator smackdown"></div>
         </div>
         <div class="superstar-card">
-            <img src="Whiskers.png" alt="Whiskers" class="superstar-image">
+            <img src="whiskers.png" alt="Whiskers" class="superstar-image">
             <h2 class="superstar-name">Whiskers</h2>
             <p class="superstar-details">Overall Rating: <span class="superstar-overall">100</span></p>
             <div class="brand-indicator smackdown"></div>
