--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="index.html" class="tab">Home</a>
             <a href="raw.html" class="tab raw-tab">Monday Night Raw</a>
             <a href="smackdown.html" class="tab smackdown-tab">Friday Night SmackDown</a>
-            <a href="championships.html" class="tab championships-tab">Championships</a>
+            <a href="Championships.html" class="tab championships-tab">Championships</a>
         </nav>
     </header>
 
