--- a/championships.html
+++ b/championships.html
@@ -47,7 +47,7 @@
             <img src="us_championship.png" alt="United States Title" class="title-image">
         </a>
         <a href="#raw-tag-team-champions" class="superstar-card">
-            <img src="SoloSikoa.png" alt="The Bloodline" class="superstar-image">
+            <img src="solosikoa.png" alt="The Bloodline" class="superstar-image">
             <h2 class="superstar-name">The Bloodline</h2>
             <p class="superstar-details">RAW Tag Team Champions</p>
             <p class="superstar-overall">Overall Rating: 100</p>
@@ -137,7 +137,7 @@
         </div>
         <div id="raw-tag-team-champions" class="champion-details">
             <div class="champion-details-row">
-                <img src="SoloSikoa.png" alt="The Bloodline" class="champion-photo">
+                <img src="solosikoa.png" alt="The Bloodline" class="champion-photo">
                 <img src="raw_tag_team.png" alt="RAW Tag Titles" class="title-photo">
                 <div class="champion-text">
                     <h2>RAW Tag Team Champions</h2>
